removed banner dep, added custom banner, date-picker props can now be passed by FormElement props

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -6,6 +6,7 @@
 @import "react-select";
 @import "react-bootstrap-slider";
 @import "react-date-picker";
+@import "banner";
 
 @import "react-draft";
 
