--- a/scss/banner.scss
+++ b/scss/banner.scss
@@ -1,30 +1,34 @@
 .banner{
-    background-color: orange;
-    text-align: center;
-    padding: 10px 10px;
-    font-size: 16px;
-    font-weight: bold;
-    display: flex;
-    margin-bottom: 10px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-  }
+  text-align: center;
+  padding: 10px 10px;
+  font-size: 16px;
+  font-weight: bold;
+  display: flex;
+  margin-bottom: 10px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.banner-error {
+  color: #FFFFFF;
+  background-color: red; 
+}
+
+.banner-transition-appear {
+  opacity: 0.01;
+}
   
-  .banner-transition-appear {
-    opacity: 0.01;
-  }
+.banner-transition-appear.banner-transition-appear-active {
+  opacity: 1;
+  transition: opacity 2s ease;
+}
   
-  .banner-transition-appear.banner-transition-appear-active {
-    opacity: 1;
-    transition: opacity 2s ease;
-  }
+.banner-transition-leave {
+  opacity: 1;
+}
   
-  .banner-transition-leave {
-    opacity: 1;
-  }
-  
-  .banner-transition-leave.banner-transition-leave-active {
-    opacity: 0.01;
-    transition: opacity 2s ease;
-  }
+.banner-transition-leave.banner-transition-leave-active {
+  opacity: 0.01;
+  transition: opacity 2s ease;
+}
